--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ from around the world.</h2>
   </div>
   <div class="footer">
     <h3>Headlines.</h3>
-    <p>1000 7th Avenue</p>
-    <p>New York, NY</p>
+    <p>2500 Vann Ness Avenue</p>
+    <p>San Francisco, CA</p>
     <p>(484) 192 - 8372</p>
   </div>
   <div>
