--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ from around the world.</h2>
   </div>
   <div class="footer">
     <h3>Headlines.</h3>
-    <p>2500 Vann Ness Avenue</p>
+    <p>2500 Van Ness Avenue</p>
     <p>San Francisco, CA</p>
     <p>(415) 192 - 8372</p>
   </div>
