Use flexbox as an art and science

--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@ from around the world.</h2>
     <p>New York, NY</p>
     <p>(484) 192 - 8372</p>
   </div>
+  <div>
+    <p id="creator">Created By Senay Yakut</p>
+  </div>
 </body>
 </html>
